# AdversarialAudioSeparation

./: .gitignore  CLAUDE.md  Datasets.py  Metadata.py  README.md  Test.py  Training.py  Utils.py  pyproject.toml  requirements.txt  separate.py
Input/: Input.py  batchgenerators.py  multistreamworkers.py
Models/: Unet.py  WGAN_Critic.py
